# skatlaz

./: README.md
skatlaz_0.1/: agent.py  llms.py  main.katlaz  main.py  memory.py  tools.py
skatlaz_0.1.0/: skatlaz_prompt.py
skatlaz_1.0_alpha/: install md.txt  katlaz_main.js  llm.py  main.katlaz  main.py  orchestrator.py  orchestrator_loop.py  requirements.txt  skatlaz.py  skatlaz_llms_prompt.py
skatlaz_1.0_alpha/agents/: base.py  code.py  creative.py  critic.py  executor.py  game.py  manager.py  planner.py  reaearch.py
skatlaz_1.0_alpha/core/: __init__.py  bootstrap.py  (+1 more)
skatlaz_1.0_beta/: skatlaz_prompt.py
skatlaz_10.0/: README.md  skatlaz_prompt.py
skatlaz_2.0/: skatlaz_prompt.py
skatlaz_3.0/: skatlaz_prompt.py
skatlaz_4.0/: skatlaz_prompt.py
skatlaz_5.0/: skatlaz_prompt.py
skatlaz_6.0/: skatlaz_prompt.py
skatlaz_7.0/: skatlaz_prompt.py
skatlaz_8.0/: skatlaz_prompt.py
skatlaz_9.0/: README.md  skatlaz_prompt.py
skatlaz_ai/: README.MD  skatlaz.py  skatlaz_config.json  skatlaz_prompt.py
skatlaz_avadratv/: config.py  media_api.py  readme.md  requirements.txt  run.py
skatlaz_official/: requirements.txt
skatlaz_scrapgram/: MANUAL.md  README.md  app.py
skatlaz_translator/: README.md  api.py  config.py  main.py
skatlaz_whois/: Dockerfile  README.md  docker-compose.yml  manual.md  pyproject.toml  skatlaz_whois.py  worker.py
skatlaz_whois/skatlaz/: __init__.py  advanced_crawler.py  ai.py  api.py  crawler.py  czds.py  database.py  domain_db.py  domain_pipeline.py  rdap.py  scraper.py  search.py  whois.py  whois_cache.py  zone_parser.py
(+84 files in other folders)
