# =========================
# pyproject.toml
# =========================
"""
[project]
name = "skatlaz_whois"
version = "0.1.0"
description = "Mini Google with AI crawler"
authors = [{name="You"}]
dependencies = [
    "flask",
    "requests",
    "beautifulsoup4",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
"""

